<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".registro_de_usuario.Registro"
    android:id="@+id/main">


    <TextView
        android:text="@string/txtbemvindos"
        android:textSize="25sp"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/txtmensagem"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--Senha do usuário-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/senha_mestre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/senha_mestre"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Confirmar senha do usuário-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/senha_mestre_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/senha_mestre_C"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Registrar senha do usuário-->
    <Button
        android:id="@+id/botao_registrar"
        android:text="@string/botao_registrar"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/opensans_regular"
        android:textColor="#fff"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>